--- a/boilerplate/templates/base.html
+++ b/boilerplate/templates/base.html
@@ -59,10 +59,13 @@
                                         {% trans %}Language{% endtrans %} : {{ locale_language }} <b class="caret"></b>
                                     </a>
                                     <ul class="dropdown-menu">
-                                        {% for l in locales %}
-                                            {% if locale_iso != l %}
-                                                <li><a href="{{ path_for_language }}&hl={{ l }}">{{ locales[l] }}</a></li>
-                                            {% endif %}
+                                        {% for l in locale_strings.others %}
+                                            <li><a href="{{ path_for_language }}&hl={{ l.tag }}">
+                                                <div class="local-native">
+                                                    <p class="local" >{{ l[1] }}</p>
+                                                    <p class="native">{{ l[2] }}</p>
+                                                </div>
+                                            </a></li>
                                         {% endfor %}
                                     </ul>
                                 </li>
